--- a/package.json
+++ b/package.json
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@reduxjs/toolkit": "^1.8.5",
+    "eslint": "^8.24.0",
+    "eslint-config-universe": "^11.1.0",
     "expo": "~46.0.9",
+    "expo-image-picker": "~13.3.1",
+    "expo-localization": "~13.1.0",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "9.4.1",
+    "i18n-js": "^4.1.1",
+    "prettier": "^2.7.1",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-hook-form": "^7.36.1",
+    "react-native": "0.69.5",
+    "react-native-maps": "0.31.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-redux": "^8.0.4",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-splash-screen": "~0.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "eslintConfig": {
+    "extends": "universe/native"
+  }
 }
