--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-screens": "~3.15.0",
     "react-redux": "^8.0.4",
     "expo-linear-gradient": "~11.4.0",
-    "expo-splash-screen": "~0.16.2"
+    "expo-splash-screen": "~0.16.2",
+    "expo-file-system": "~14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
