--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "eslint": "^8.24.0",
     "eslint-config-universe": "^11.1.0",
     "expo": "~46.0.9",
+    "expo-file-system": "~14.1.0",
     "expo-image-picker": "~13.3.1",
+    "expo-linear-gradient": "~11.4.0",
     "expo-localization": "~13.1.0",
     "expo-location": "~14.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "firebase": "9.4.1",
     "i18n-js": "^4.1.1",
@@ -28,12 +31,10 @@
     "react-hook-form": "^7.36.1",
     "react-native": "0.69.5",
     "react-native-maps": "0.31.1",
+    "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-redux": "^8.0.4",
-    "expo-linear-gradient": "~11.4.0",
-    "expo-splash-screen": "~0.16.2",
-    "expo-file-system": "~14.1.0"
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
