--- a/package.json
+++ b/package.json
@@ -14,19 +14,14 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
-    "eslint": "^8.24.0",
-    "eslint-config-universe": "^11.1.0",
     "expo": "~46.0.9",
     "expo-file-system": "~14.1.0",
     "expo-image-picker": "~13.3.1",
     "expo-linear-gradient": "~11.4.0",
-    "expo-localization": "~13.1.0",
     "expo-location": "~14.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "firebase": "9.4.1",
-    "i18n-js": "^4.1.1",
-    "prettier": "^2.7.1",
     "react": "18.0.0",
     "react-hook-form": "^7.36.1",
     "react-native": "0.69.5",
@@ -37,7 +32,10 @@
     "react-redux": "^8.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint": "^8.24.0",
+    "eslint-config-universe": "^11.1.0",
+    "prettier": "^2.7.1"
   },
   "private": true,
   "eslintConfig": {
