--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
         "image": "./assets/splash.png",
         "resizeMode": "contain",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": ["READ_EXTERNAL_STORAGE","WRITE_EXTERNAL_STORAGE","INTERNET"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
