--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
     "expo": "~46.0.9",
-    "expo-file-system": "~14.1.0",
     "expo-image-picker": "~13.3.1",
     "expo-linear-gradient": "~11.4.0",
     "expo-location": "~14.3.0",
@@ -24,7 +23,8 @@
     "firebase": "9.4.1",
     "react": "18.0.0",
     "react-hook-form": "^7.36.1",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-maps": "0.31.1",
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.3.1",
