--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-maps": "0.31.1",
+    "react-native-modal": "^13.0.1",
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
